--- a/pages/styles.css
+++ b/pages/styles.css
@@ -34,3 +34,20 @@ grid-column:2;
   max-width: 500px;
   grid-row:2;
 }
+
+#headCredits{
+    font-size:40px;
+    text-align: center;
+    margin-bottom:40px;
+}
+
+#creditsList{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#creditsList > p{
+    align-self: center;
+    justify-self: center;
+}
+
