--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,28 +1,22 @@
 .css-0 > a{
     display:grid;
-    grid-template-columns: 300px 1fr;
-    grid-template-rows:1fr 1fr 1fr;
+    grid-template-columns: 300px;
+    grid-template-rows:1fr 50px;
     grid-column-gap:20px;
     margin-bottom:30px;
 }
 
 .css-0 > a > img{
-    grid-row:1/4;
+    grid-row:1/2;
     grid-column: 1;
     max-width: 300px;
 }
 
-.css-0 > a > span{
-    grid-column: 2;
-    grid-row:1;
-    align-self: start;
-    justify-self: start;
-    margin:0
-}
+
 
 .chakra-text.css-0{
-grid-row:1;
-grid-column:2;
+    align-self: center;
+    justify-self: center;
 }
 
 .css-0{
@@ -51,3 +45,19 @@ grid-column:2;
     justify-self: center;
 }
 
+.css-sjeqnk{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.css-sjeqnk > li > a{
+    max-height: 600px;
+}
+.css-sjeqnk > li > a > span{
+    grid-row: 1;
+    grid-column: 1;
+    background: orange;
+    align-self: start;
+    justify-self: end;
+    padding: 10px;
+}
