--- a/pages/styles.css
+++ b/pages/styles.css
@@ -108,7 +108,7 @@ ul > li > a > div > span{
 
 
 
-.pageTitle{
+#pageTitle{
     font-size: 40px;
     text-align: center;
     margin-bottom: 50px;
